UX Update My Vault

--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -300,7 +300,17 @@
                                 <md-content style="padding: 0;">
                                     <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                         <md-list class="md-dense" flex>
-                                            <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
+                                            <md-list-item ng-repeat="file in me.files" class="noright">
+                                                <h3 style="font-size: 16px;">{{file.name || file.title}}</h3>
+                                                <a href="{{file.link}}" target="_blank" class="md-secondary" style="text-decoration: none;">
+                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
+                                                </a>
+                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">share</md-icon>
+                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">cloud_download</md-icon>
+                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">delete</md-icon>
+                                                <md-divider ng-if="!$last"></md-divider>
+                                            </md-list-item>
+                                            <!-- <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
                                                 <div class="md-list-item-text">
                                                     <h3 style="font-size: 16px;">{{file.name || file.title}}</h3>
                                                 </div>
@@ -338,7 +348,7 @@
                                                     </md-menu-content>
                                                 </md-menu>
                                                 <md-divider ng-if="!$last"></md-divider>
-                                            </md-list-item>
+                                            </md-list-item> -->
                                         </md-list>
                                         <md-list ng-if="!me.files" class="md-dense" flex>
                                             <md-list-item class="md-2-line" flex>
