--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -3,6 +3,7 @@
     .md-default-theme .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-default-theme .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {background: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
+    md-list-item.hovered {box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);}
 </style>
 <div class="dialog-curtain userVault" ng-show="my_vault_detail_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
@@ -300,17 +301,19 @@
                                 <md-content style="padding: 0;">
                                     <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                         <md-list class="md-dense" flex>
-                                            <md-list-item ng-repeat="file in me.files" class="noright">
-                                                <p>{{file.name || file.title}}</p>
-                                                <a href="{{file.link}}" target="_blank" class="md-secondary" style="text-decoration: none;">
-                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
-                                                </a>
-                                                &nbsp;
-                                                <md-icon ng-click="openShare(file)" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">share</md-icon>
-                                                &nbsp;
-                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">cloud_download</md-icon>
-                                                &nbsp;
-                                                <md-icon ng-click="deleteMyFile(me, file)" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">delete</md-icon>
+                                            <md-list-item ng-repeat="file in me.files" class="noright" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" ng-class="{'hovered': hovered}">
+                                                <p md-truncate>{{file.name || file.title}}</p>
+                                                <span ng-show="hovered">
+                                                    <a href="{{file.link}}" target="_blank" class="md-secondary" style="text-decoration: none;">
+                                                    <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
+                                                    </a>
+                                                    &nbsp;
+                                                    <md-icon ng-click="openShare(file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">share</md-icon>
+                                                    &nbsp;
+                                                    <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">cloud_download</md-icon>
+                                                    &nbsp;
+                                                    <md-icon ng-click="deleteMyFile(me, file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" class="md-secondary">delete</md-icon>
+                                                </span>
                                                 <md-divider ng-if="!$last"></md-divider>
                                             </md-list-item>
                                             <!-- <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
