--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -10,7 +10,7 @@
         <md-card-header>
             <md-card-header-text>
                 <span class="md-title">Share {{file.name}}</span>
-                <span class="md-subhead">Share a document with a user</span>
+                <span class="md-subhead">Share a resource</span>
             </md-card-header-text>
         </md-card-header>
         <md-card-content flex>
@@ -21,9 +21,10 @@
                             <label>Users</label>
                             <md-select ng-model="share_to">
                                 <md-option><em>None</em></md-option>
-                                <md-option ng-repeat="user in userslist" ng-value="user.id">
+                                <md-option ng-if="isAuthorized('UserVault', me.security.roles)" ng-repeat="user in userslist" ng-value="user.id">
                                     {{user.firstname}} {{user.lastname}}
                                 </md-option>
+                                <md-option ng-if="!isAuthorized('UserVault', me.security.roles)" ng-value="internal">Send to {{settings.data.company_name}}</md-option>
                             </md-select>
                         </md-input-container>
                     </md-list-item>
