--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -39,43 +39,27 @@
                     </md-card-header>
                     <md-card-content>
                         <md-list class="md-dense" flex>
-                            <md-list-item ng-repeat="task in tasklist track by $index">
-                                <md-menu>
-                                    <md-button class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
-                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="task menu" md-font-library="material-icons">more_vert</md-icon>
-                                    </md-button>
-                                    <md-menu-content width="4">
-                                        <md-menu-item>
-                                            <md-button ng-confirm-message="Are you sure you want to update this task?" ng-confirm-click="updateTask(task)" ng-confirm-condition="true">
-                                            Update Task
-                                            </md-button>
-                                        </md-menu-item>
-                                        <md-menu-item>
-                                            <md-button>
-                                            Run Task
-                                            </md-button>
-                                        </md-menu-item>
-                                        <md-menu-item>
-                                            <md-button ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task)" ng-confirm-condition="true">
-                                            Delete Task
-                                            </md-button>
-                                        </md-menu-item>
-                                        <md-menu-divider></md-menu-divider>
-                                        <md-menu-item>
-                                            <md-button ng-click="openUpdateTask(task)">
-                                            View Task
-                                            </md-button>
-                                        </md-menu-item>
-                                    </md-menu-content>
-                                </md-menu>
-                                <div class="md-list-item-text">
-                                    <p style="font-size: 16px;">{{task.title}}</p>
-                                </div>
-                                <md-switch class="md-secondary" ng-model="task.enabled"></md-switch>
-                                <md-divider></md-divider>
+                            <md-list-item ng-repeat="task in tasklist track by $index" class="noright" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" ng-class="{'hovered': hovered}">
+                                <p md-truncate>{{task.title}}</p>
+                                <span class="md-secondary" ng-show="hovered">
+
+                                    <md-icon ng-confirm-message="Are you sure you want to update this task?" ng-confirm-click="updateTask(task)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
+                                    &nbsp;
+                                    <md-icon ng-confirm-message="Are you sure you want to run this task now?" ng-confirm-click="runTask(task)" ng-confirm-condition="true" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">sync</md-icon>
+                                    &nbsp;
+                                    <md-icon ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task)" ng-confirm-condition="true" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
+                                    &nbsp;
+                                    <md-icon ng-click="openUpdateTask(task)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">edit</md-icon>
+                                </span>
+                                <md-divider ng-if="!$last"></md-divider>
                             </md-list-item>
-                            <md-list-item ng-show="tasklist.length == 0">
-                                <p>You don't have any tasks configured yet.</p>
+                        </md-list>
+                        <md-list ng-if="tasklist.length == 0" class="md-dense" flex>
+                            <md-list-item flex>
+                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
+                                <div class="md-list-item-text">
+                                    <h3 style="font-size: 16px;">You don't have any tasks configured yet.</h3>
+                                </div>
                             </md-list-item>
                         </md-list>
                     </md-card-content>
@@ -87,26 +71,18 @@
                         <md-card-header>
                             <md-card-header-text>
                                 <span class="md-title">App Notifications</span>
-                                <span class="md-subhead">Message Pipeline</span>
+                                <span class="md-subhead">Incoming Messages For {{settings.data.company_name}}</span>
                             </md-card-header-text>
                         </md-card-header>
-                        <md-card-content>
-                            <md-tabs md-dynamic-height md-border-bottom>
-                                <md-tab label="Leads">
-                                    <md-content style="padding: 0;">
-                                        <div layout="column" layout-align="center stretch" style="margin: 0" flex>
-                                            <md-list class="md-dense" flex>                                              
-                                                <md-list-item class="md-2-line" flex>
-                                                    <div class="md-list-item-text">
-                                                        <p>You don't have any leads yet.</p>
-                                                    </div>
-                                                </md-list-item>
-                                            </md-list>
-                                        </div>
-                                    </md-content>
-                                </md-tab>                                
-                            </md-tabs>
+                        <md-card-content>                             
+                            <md-list-item class="md-dense" flex>
+                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
+                                <p md-truncate>You don't have any incoming messsages yet.</p>
+                            </md-list-item>        
                     </md-card-content>
+                    <md-card-actions layout="row" layout-align="end center" flex>
+                        <md-button class="md-raised" ng-click="null" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">View All</md-button>
+                    </md-card-actions>
                 </md-card>
             </div>
         </md-card-content>
