--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -419,7 +419,7 @@
                                         <md-list-item ng-show="taskAddObj.frequency != 'daily' && taskAddObj.task_type != 'onetime' && taskAddObj.frequency != 'annually'">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>Choose Which Day To Run The Task</label>
-                                                <md-select ng-model="taskAddObj.run_day" ng-required="taskAddObj.frequency ='monthly' || taskAddObj.frequency ='bi-weekly' || taskAddObj.frequency ='weekly'" name="createTaskForm.run_day">
+                                                <md-select ng-model="taskAddObj.run_day" ng-required="taskAddObj.frequency == 'monthly' || taskAddObj.frequency == 'bi-weekly' || taskAddObj.frequency == 'weekly'" name="createTaskForm.run_day">
                                                     <md-option><em>None</em></md-option>
                                                     <md-option ng-value="0">
                                                         Sunday
@@ -590,7 +590,7 @@
                                         <md-list-item ng-if="taskAddObj.send_report_to_users">
                                             <span>Report To Individuals</span>
                                             <span class="md-secondary">
-                                            {{taskAddObj.send_report_to_users.length > 1 : 'Multiple Users' : 'Single User'}}
+                                            {{taskAddObj.send_report_to_users.length > 1 ? 'Multiple Users' : 'Single User'}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.send_report_to_users"></md-divider>
@@ -629,7 +629,7 @@
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.run_day"></md-divider>
-                                        <md-list-item>
+                                        <md-list-item ng-if="taskAddObj.task_date">
                                             <span>Runs On This Date</span>
                                             <span class="md-secondary">
                                             {{taskAddObj.task_date}}
